@@ -2,6 +2,6 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.CosmicImport">
-        <property name="version" value="Cosmic Import pipeline   -- build Mar 04, 2024" />
+        <property name="version" value="Cosmic Import pipeline   -- build Apr 26, 2024" />
     </bean>
 </beans>
